# forge-1

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
Forge/: __main__.py  export_runtime.py
backend/: __init__.py  block.py  block_authoring.py  block_catalog.py  custom_blocks.py  document_service.py  main.py  mcp_server.py  pipeline_export.py  pipeline_graph.py  pipeline_layout.py  pipeline_mermaid.py  pipeline_store.py  progress.py  registry.py  schemas.py  services.py  settings.py  version.py
backend/api/: blocks.py  checkpoints.py  custom_blocks.py  deps.py  execution.py  files.py  mcp_config.py  pipelines.py
backend/engine/: __init__.py  checkpoint_store.py  execution_manager.py  execution_worker.py  provenance.py  runner.py
blocks/: __init__.py  clustering.py  combine.py  dimensionality.py  factorization.py  io.py  operators.py  statistics.py  transform.py  visualization.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  ForgeShell.tsx  main.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
scripts/: version_sync.py
tests/: test_atomic_blocks.py  test_block_params_null_defaults.py  test_custom_block_plugins_api.py  test_execution_manager.py  test_filter_by_lookup_values.py  test_mcp_server.py  test_nuisance_als_legacy_params.py  test_nuisance_als_sweep.py  test_phase1_engine.py  test_phase2_api.py  test_pipeline_mermaid.py  test_progress.py  test_settings.py
toy_datasets/: toy_1.csv  toy_2.csv
(+37 files in other folders)
